// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppContainer /> with filters renders correctly 1`] = `
<styled.div>
  <Connect(FilterList) />
  <styled.div>
    <styled.div
      phone="100"
    >
      <ProductList />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<AppContainer /> without filters renders correctly 1`] = `
<styled.div>
  <styled.div>
    <styled.div
      phone="100"
    >
      <ProductList />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<StyledAppContainer /> renders correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  font-family: Roboto,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  color: #37474f;
}

.c0 * {
  box-sizing: border-box;
}

<div
  class="c0"
>
  
</div>
`;
